# Minisql

./: .gitignore  CMakeLists.txt  README.md  Report - Group.md  Report - Weiye Chen.md  Report - XinNing Zhang.md  main.cpp  minisql.cpp  minisql.h
API/: API.cpp  API.h
BufferManager/: BufferManager.cpp  BufferManager.h
CatalogManager/: Attribute.cpp  Attribute.h  Catalog.cpp  Catalog.h  CatalogManager.cpp  CatalogManager.h
IndexManager/: Index.cpp  Index.h  node.cpp  node.hpp
Interpreter/: Interpreter.cpp  Interpreter.h  SQL_Satatement.cpp  SQL_Satatement.h  SyntaxError.cpp  SyntaxError.h
RecordManager/: RecordManager.cpp  RecordManager.h  Records.cpp  Records.h
assets/: Interpreter.drawio
